Simplified Code and provided better example

--- a/src/classes/ISlackCommand.cls
+++ b/src/classes/ISlackCommand.cls
@@ -1,7 +1,7 @@
+// Author: Charlie Jonas (Charlie@callwaycloudconsulting.com)
+//Interface all Slack Commands must inherit from
 global interface ISlackCommand {
+
     //returns the response to the slack user
     SlackCommand.SlackResponse getResponse(SlackCommand.SlackCommandParams params);
-
-    //can be used to execute DML after we send our response.  Must be seperated due to DML after callout limits
-    void runDML();
 }
